# bored

./: README.md  index.html  package-lock.json  package.json
agent-kanban/: .gitignore  package.json
agent-kanban/scripts/: agent-kanban-hook.js
agent-kanban/src/: App.tsx
agent-kanban/src-tauri/: Cargo.toml  tauri.conf.json
agent-kanban/src-tauri/scripts/: agent-kanban-hook.js  claude-hook.js  cursor-hook.js
agent-kanban/src-tauri/src/: lib.rs  main.rs
agent-kanban/src-tauri/src/agents/: claude.rs  cursor.rs  mod.rs  prompt.rs  spawner.rs  worker.rs
agent-kanban/src-tauri/src/api/: auth.rs  cleanup.rs  error.rs  events.rs  handlers.rs  mod.rs  spool.rs  state.rs  types.rs
agent-kanban/src-tauri/src/commands/: boards.rs  claude.rs  cursor.rs  mod.rs  projects.rs  runs.rs  tickets.rs  workers.rs
agent-kanban/src-tauri/src/db/: mod.rs  models.rs  projects.rs  runs.rs  schema.rs  tickets.rs
agent-kanban/src-tauri/src/lifecycle/: mod.rs  rules.rs  state.rs  transitions.rs
docs/: MANUAL_TEST_CHECKLIST.md
docs/guides/: 01-project-setup.md  01.5-project-management.md  02-database-design.md  03-kanban-ui.md  04-local-api.md  05-agent-orchestration.md  06-cursor-integration.md  07-claude-code-integration.md  08-hook-bridge.md  09-worker-mode.md  10-ticket-lifecycle.md  11-worker-workflow.md  README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: agent-kanban-hook.js  cursor-hook.js
src-tauri/src/: lib.rs  logging.rs  main.rs
src/hooks/: useBoardSync.test.ts  useBoardSync.ts  (+1 more)
(+144 files in other folders)
